# HQTTtResonancesTools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Dockerfile  README.md
.svn/: entries
.svn/text-base/: CMakeLists.txt.svn-base  ChangeLog.svn-base
HQTTtResonancesTools/: AngularCutsSL.h  AngularCutsSLSelector.h  ElectronTtres.h  ElectronTtresFakes.h  JetTtres.h  MuonTtresFakes.h  NLargeJetAnyTopTagSelector.h  NLargeJetTtresFHDNNTopTagSelector.h  NLargeJetTtresLeptonicSelector.h  NLargeJetTtresST50NoLeptonSelector.h  NLargeJetTtresSTSelector.h  NLargeJetTtresSTTSelector.h  NLargeJetTtresSTTau32Selector.h  NLargeJetTtresSTmtSelector.h  NLargeJetTtresSmoothedTTMassTau32Selector.h  NLargeJetTtresSubstructureTogTag50Selector.h  NLargeJetTtresSubstructureTogTag80Selector.h  NLargeJetTtresSubstructureTopTag50Selector.h  NLargeJetTtresSubstructureTopTag80Selector.h  ObjectLoaderTtres.h  OverlapRemovalIndicesTtres.h  TrackMV2c10Selector.h  TrackMV2c20Selector.h  TruthMttSelector.h  TtbarPartonHistorySaver.h  TtresEventSaverFlatNtuple.h
HQTTtResonancesTools/.svn/: entries
HQTTtResonancesTools/.svn/text-base/: HQTTtResonancesToolsLoader.h.svn-base  JetTtres.h.svn-base  MuonTtres.h.svn-base  MuonTtresFakesInclusiveSd0.h.svn-base  MuonTtresFakesInvSd0.h.svn-base  NLargeJetTtresFakesSelector.h.svn-base  NLargeJetTtresMassOnlySelector.h.svn-base  NLargeJetTtresST80NoLeptonSelector.h.svn-base  NLargeJetTtresSTMassSelector.h.svn-base  NLargeJetTtresSTNoKinSelector.h.svn-base  NLargeJetTtresSTNoSJetSelector.h.svn-base  NLargeJetTtresSTSelector.h.svn-base  NLargeJetTtresSTSimpleSelector.h.svn-base  NLargeJetTtresSTWjetsSelector.h.svn-base  TtresEventSaverFlatNtuple.h.svn-base  WFilter.h.svn-base
Root/: AngularCutsSL.cxx  AngularCutsSLSelector.cxx  ElectronTtres.cxx  ElectronTtresFakes.cxx  HQTTtResonancesTools.cxx  JetTtres.cxx  LinkDef.h  MuonTtresFakes.cxx  NJetCloseLeptonSelector.cxx  NLargeJetAnyTopTagSelector.cxx  NLargeJetTtresAHSelector.cxx  NLargeJetTtresFHDNNTopTagSelector.cxx  NLargeJetTtresFakesSelector.cxx  NLargeJetTtresLeptonicSelector.cxx  NLargeJetTtresMassOnlySelector.cxx  NLargeJetTtresSLSelector.cxx  NLargeJetTtresST50NoLeptonSelector.cxx  NLargeJetTtresST80NoLeptonSelector.cxx  NLargeJetTtresSTMassSelector.cxx  NLargeJetTtresSTNoKinSelector.cxx  NLargeJetTtresSTNoSJetSelector.cxx  NLargeJetTtresSTSelector.cxx  NLargeJetTtresSTSimpleSelector.cxx  NLargeJetTtresSTTSelector.cxx  NLargeJetTtresSTTau32Selector.cxx  NLargeJetTtresSTWjetsSelector.cxx  NLargeJetTtresSTmtSelector.cxx  NLargeJetTtresSmoothedTTMassTau32Selector.cxx  NLargeJetTtresSubstructureTogTag50Selector.cxx  NLargeJetTtresSubstructureTogTag80Selector.cxx  NLargeJetTtresSubstructureTopTag50Selector.cxx  NLargeJetTtresSubstructureTopTag80Selector.cxx  NLargeJetVHresSelector.cxx  ObjectLoaderTtres.cxx  TrackMV2c10Selector.cxx  TrackMV2c20Selector.cxx  TruthMttSelector.cxx  TtresEventSaverFlatNtuple.cxx  WFilter.cxx
Root/.svn/: entries
Root/.svn/text-base/: JetTtres.cxx.svn-base  MuonTtres.cxx.svn-base  MuonTtresFakesInclusiveSd0.cxx.svn-base  MuonTtresFakesInvSd0.cxx.svn-base  NLargeJetTtresAHSelector.cxx.svn-base  NLargeJetTtresFakesSelector.cxx.svn-base  NLargeJetTtresMassOnlySelector.cxx.svn-base  NLargeJetTtresSLSelector.cxx.svn-base  NLargeJetTtresSTNoKinSelector.cxx.svn-base  NLargeJetTtresSTNoSJetSelector.cxx.svn-base  NLargeJetTtresSTSelector.cxx.svn-base  NLargeJetTtresSTSimpleSelector.cxx.svn-base  NLargeJetTtresSTTSelector.cxx.svn-base  ObjectLoaderTtres.cxx.svn-base  OverlapRemovalIndicesTtres.cxx.svn-base  TtbarPartonHistorySaver.cxx.svn-base  TtresEventSaverFlatNtuple.cxx.svn-base
cmt/: Makefile.RootCore
cmt/.svn/: entries
python/: DC15Data13TeV_25ns_207_EXOT4.py  Data15_EXOT4_rel21.py  Data_EXOT4_rel21.py  Data_EXOT7_rel21.py  MC16a_EXOT4.py  MC16a_EXOT7.py  MC16a_TOPQ1.py  MC16d_EXOT4.py  MC16d_EXOT7.py  MC16e_EXOT4.py  MC16e_EXOT7.py  cluster.py  clusters.py  getStatusOfSignalSamples.py  isThereEnoughStat.py  patchForOfficialProd.diff  submitToCluster.py  submitToGrid-25ns-207.py  submitToGrid-25ns-fakes.py  submitToGrid-25ns-pdf.py  submitToGrid-25ns-syst.py  submitToGrid.py
python/.svn/: entries
python/.svn/text-base/: DC15Data13TeV_25ns_EXOT7.py.svn-base  DC15MC13TeV_25ns_mc15c_EXOT4.py.svn-base  DC15MC13TeV_EXOT7.py.svn-base  grid.py.svn-base
scripts/: findDatasets.py  submitToCluster.py  submitToGrid.py
share/: PRW_ExotComb_mc16a.root  PRW_ExotComb_mc16d.root  PRW_ExotComb_mc16e.root  PRW_HVTAZp_mc16a.root  PRW_Zp_mc16a.root  PRW_Zp_mc16e.root  PRW_mttSlicedTtbar_mc16a.root  PRW_mttSlicedTtbar_mc16d.root  README  TopSystematicObjectMaker_2335.patch  dumpCutflow.py  dumpYieldsForMC.py  kkg_mc16a.root  kkg_mc16d.root  kkg_mc16e.root  mc15b.prw.410000.25ns.root  plotYieldByRun.py  prw.merged_2022_Updated.root  ttres-allhad-cuts-mc15c_tau32.txt  ttres-allhad-cuts-mc16-25ns.txt  ttres-allhad-cuts.txt  ttres-dil-cuts.txt  ttres-ljets-cuts-mc15c-25ns-pdf.txt  ttres-ljets-cuts-mc15c-25ns.txt  ttres-ljets-cuts-mc15c-fakes-WjetsCR+SR-25ns-e.txt  ttres-ljets-cuts-mc15c-fakes-WjetsCR+SR-25ns-mu.txt  ttres-ljets-cuts-mc16-25ns-extra.txt  ttres-ljets-cuts-mc16-25ns.txt  ttres-ljets-cuts-mc16-25ns_syst.txt  ttres-ljets-cuts-mc16-fakes-25ns-e.txt  ttres-ljets-cuts-mc16-fakes-25ns-mu.txt  ttres-ljets-cuts-mc16-fakes-WjetsCR+SR-25ns-e.txt  ttres-ljets-cuts-mc16-fakes-WjetsCR+SR-25ns-mu.txt
share/.svn/: entries
share/.svn/text-base/: SgTop.mc15.prw.root.svn-base  all_25ns.mc15.prw.root.svn-base  dumpCutflowByPeriod.py.svn-base  dumpCutflowByRun.py.svn-base  dumpCutflowZprime.py.svn-base  ilumicalc_histograms_None_276262-280614.root.svn-base  ilumicalc_histograms_None_297730-300279.root.svn-base  ilumicalc_histograms_None_297730-300908.root.svn-base  mc15c.prw.410000.25ns.root.svn-base  mc16_Zp3000.prw.root.svn-base  mc16_Zp5000.prw.root.svn-base  mc16_ttbar410501.prw.root.svn-base  patch_TopSystematicObjectMaker.diff.svn-base  toRequest-ttres-mc15c.txt.svn-base  ttbar_25ns.mc15.prw.root.svn-base  ttres-allhad-cuts-mc15.txt.svn-base  ttres-allhad-cuts-mc15_HTT.txt.svn-base  (+7 more)
